--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "redux-persist": "^5.9.1",
     "styled-components": "^3.2.6",
     "uuid": "^3.2.1"
+  },
+  "rnpm": {
+    "assets": ["./fonts"]
   }
 }
